# rust_cli_ical

./: Cargo.toml  LICENSE  README.md
src/: main.rs
