[package]
name = "hockey-schedule"
version = "0.1.0"
edition = "2021"
description = "CLI tool to fetch and display upcoming hockey games from an iCal feed"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
ical = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
regex = "1"
